FIX: optomized code through align-items: stretch to fix sizing issues when adjusting browser size

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
     padding: 0px;
     margin: 0px;
     font-family: monospace;
+    align-items: stretch;
 }
 
 .header, .introduction{
@@ -16,7 +17,7 @@ body{
     justify-content: center;
     background-color: #1F2937;
     color: white;
-    padding: 0 8px;
+    padding: 0px 100px;
     justify-content: center;
     min-width: 500px;
 }
@@ -24,8 +25,7 @@ body{
 .logo{
     font-size: 24px;
     color: #F9FAF8;
-    flex-grow: 1;
-    max-width: 600px;
+    margin-right: auto;
 }
 
 ul{
@@ -53,4 +53,14 @@ h2{
     font-size: 18px;
     color: #E5E7EB;
     width: 500px;
+}
+
+
+
+
+button{
+    background-color: #3882F6;
+    border-radius: 4px;
+    border: 0px;
+    padding: 4px 12px;
 }
